# RustPersonalWebsite

./: .gitignore  README.md
rustServer/: .env.example  Cargo.toml  Dockerfile  README.md
rustServer/src/: auth.rs  config.rs  db.rs  downloads.rs  handlers.rs  mail.rs  main.rs
